--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,9 +1,9 @@
 basic_settings:
   site_title: Lucien & Lucien - Design Studio
-  favicon_image: /images/favicon.png
+  favicon_image: /images/lucienlucienfavicon.png
 
 header_settings:
-  logo_image: /images/logo.png
+  logo_image: /images/lucienlucienlogo.png
   logo_width: 240
 
 menu_settings:
