--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ menu_settings:
       url: '/contact'
 
 footer_settings:
-  footer_tagline: Lucien & Lucien - Design Studio
+  footer_tagline:
 
 grid_settings:
   overlay_opacity: 0.8
@@ -24,7 +24,7 @@ grid_settings:
   content_alignment: bottom
 
 contact_settings:
-  form_action: ''
+  form_action: 'https://formspree.io/f/mwkwalqg'
   confirmation_url: '/thanks/'
   email_subject: 'Contact form submission'
   send_button_text: 'Send Message'
