--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,10 +1,11 @@
 basic_settings:
-  site_title: Franck Ratier Design Studio
+  site_title: Franck Ratier
   #favicon is now hardcoded in _layouts/defaults.html
   #favicon_image: /images/favicon.png
 
 header_settings:
-  logo_image: /images/franckratierlogo.png
+  #logo_image: /images/franckratierlogo.png
+  #logo_image: /images/franckratierlogo.png
   logo_width: 240
 
 menu_settings:
@@ -82,8 +83,9 @@ color_settings:
   error_color: '#D64541'
 
 font_settings:
-  font_embed: '<link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500&family=Permanent+Marker&display=swap" rel="stylesheet">'
-  logo_font: '"Permanent Marker", sans-serif'
+  #font_embed: '<link href="https://fonts.googleapis.com/css2?family=Candal&display=swap" rel="stylesheet">'
+  font_embed: '<link href="https://fonts.googleapis.com/css2?family=Jura:wght@400&family=Cinzel:wght@400&display=swap" rel="stylesheet">'
+  logo_font: '"Cinzel", cursive'
   title_font: '"Jura", sans-serif'
   body_font: '"Jura", sans-serif'
   regular_weight: 400
@@ -92,7 +94,7 @@ font_settings:
     small_size: 22
     medium_size: 26
     large_size: 30
-    weight: 500
+    weight: 400
     letter_spacing: -0.02
   menu:
     small_size: 30
@@ -116,7 +118,7 @@ font_settings:
     small_size: 25
     medium_size: 35
     large_size: 45
-    weight: 500
+    weight: 400
     letter_spacing: -0.02
     line_height: 1.2
   h2:
